--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Personal Library</title>
-    <link rel="stylesheet" href="./view/index.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <script src="https://kit.fontawesome.com/5f4cb4baa1.js"></script>
   </head>
   <body>
@@ -13,7 +13,10 @@
       <i class="fab fa-github-square"></i>
     </a>
 
-    <img src="https://media.giphy.com/media/rdvDGctztED3W/giphy.gif" />
+    <img
+      src="https://media.giphy.com/media/rdvDGctztED3W/giphy.gif"
+      alt="Image of a woman reading in library on a rainy day"
+    />
 
     <p>Add, update, and delete books from your library.</p>
 
